# dolphin

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LANGUAGE-RULES.zh-CN.md  Makefile  QUICK_START_DOCS.md  README.md  README.zh-CN.md  azure-pipelines.yml  build-dolphin.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-dolphin.yml  opencode-review.yml  test.yml
config/: global.template.yaml
docs/: CHANGELOG.md  README.md  index.md  quick_start_guide.md
docs/architecture/: Artifacts_Design.md  Runtime_Tracking_Architecture_Guide.md  coroutine_execution_design.md  module_restructure_design.md
docs/context_engineer/: agentic_context_playbook_design.md  context_engineer_guide.md
docs/core/: memory.md  multimodal_support_design.md
docs/design/architecture/: Artifacts_Design.md  Runtime_Tracking_Architecture_Guide.md  agent_architecture_guide.md  coroutine.md  verbose_implementation_summary.md
docs/design/cli/: user_interrupt_design.md
docs/design/context/: context_engineer_v2.md  long_term_memory_design.md
docs/design/core/: agents.md  multimodal_support_design.md  multiple-tool-calls.md  plan-support-architecture.md  verify-proposal.md
docs/design/observability/: agent_execution_tracing_design.md
docs/design/skill/: mcp_integration_design.md  resource-skill-support-design.md  skill_context_strategy_design.md  skill_results_class_diagram.md
docs/experiments/: dolphin_semantic_training_design.md  experiments.md
docs/function/: output_format_usage_guide.md
docs/getting-started/: basics.md  quickstart.md
docs/javascripts/: mermaid-init.js
docs/language/: code_blocks.md
docs/skill/: resource-skill-support-design.md  skill_context_strategy_design.md
docs/superpowers/plans/: 2026-04-16-rename-skill-to-tool.md
docs/usage/concepts/: code_blocks.md  language_rules.md
docs/usage/configuration/: feature_flags_management_design.md
docs/usage/guides/: Dolphin_Language_SDK_Variable_Format_Guide.md  dolphin-agent-integration.md  dolphin-agent-integration.zh-CN.md  skill_loading_refactor.md  skillkit_hook_guide.md  use_mkdocs.md
docs/usage/language_rules/: language_rules.md
docs/usage/quick_start/: basics.md  installation.md  quick_start_guide.md  quickstart.md
examples/: README.md  README.zh-CN.md
examples/deepsearch/: deepersearch.dph  deepsearch.dph  web_query.dph  web_search.dph
examples/deepsearch/config/: global.template.yaml
examples/resource_skill/: skill_guided_assistant.dph
examples/resource_skill/config/: global.template.yaml
examples/tabular_analyst/: tabular_analyst.dph
examples/tabular_analyst/config/: global.template.yaml
examples/tabular_analyst/skillkits/: tabular_skillkit.py
examples/types/: Product.type  UserProfile.type
experiments/optimization/: IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_METHODS.md
src/: __init__.py
src/DolphinLanguageSDK/: __init__.py  dynamic_tool_provider.py
src/dolphin/: __init__.py
src/dolphin/cli/: config.py
src/dolphin/core/: __init__.py  interfaces.py  task_registry.py
src/dolphin/lib/: __init__.py
src/dolphin/sdk/: __init__.py
tests/: README.md  TEST_STYLE_GUIDE.md  __init__.py  conftest.py  run_tests.sh
tests/integration_test/: __init__.py  mocked_skillkit.py  mocked_toolkit.py  mocked_tools.py  test_config.py  test_loader.py  test_runner.py
tests/integration_test/dolphins/: agent_chain_test.dph  explore_1.dph  judge_1.dph  multi_tool_calls_backward_compat.dph  multi_tool_calls_basic.dph  multi_tool_calls_error_handling.dph  multi_tool_calls_two_tools.dph  output_format_error.dph  output_format_json.dph  output_format_jsonl.dph  output_format_list_str.dph  output_format_object.dph  prompt_1.dph  simple_agent_test.dph  tool_interrupt_explore_v1_prompt.dph  tool_interrupt_explore_v1_toolcall.dph  tool_interrupt_explore_v2.dph  tool_interrupt_judge.dph  tool_interrupt_modify_explore_v2.dph  tool_interrupt_modify_toolblock.dph  tool_interrupt_multi_interrupt_explore.dph  tool_interrupt_multi_step_explore.dph  tool_interrupt_resume_multi.dph  tool_interrupt_resume_single.dph  tool_interrupt_toolblock.dph  variable_test_1.dph  variable_test_2.dph  variable_test_3.dph  variable_test_4.dph  variable_test_5.dph  variable_test_6.dph  variable_test_7.dph  variable_test_8.dph
tests/unittest/: conftest.py
tests/unittest/agent/: test_agent.py  (+8 more)
tools/: README.md  README.zh-CN.md  view_trajectory.py
(+281 files in other folders)
