[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kweaver-dolphin"
version = "0.6.0"
description = "Dolphin Language - An intelligent agent framework"
authors = [
    {name = "AnyData", email = "contact@anydata.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 核心依赖（安装 dolphin.core 和 dolphin.sdk 所需）
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "openai>=1.0.0,<2.0.0",
    "tiktoken>=0.4.0,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "aiofiles>=23.0.0",
    "requests>=2.31.0",
    "docstring-parser>=0.15",
    "jsonschema>=4.17.0",
    "rich>=14.0.0,<15.0.0",
]

# 可选依赖（按需安装）
[project.optional-dependencies]
# pip install kweaver-dolphin[lib] - 安装标准库功能
lib = [
    "mcp>=1.0.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "oracledb>=2.2.0,<3.0.0",
    "paramiko>=3.5.0",
    "cryptography>=43.0.0",
    "pandas",
]

# pip install kweaver-dolphin[cli] - 安装命令行工具
cli = [
    "rich>=14.0.0,<15.0.0",
    "prompt_toolkit>=3.0.0,<4.0.0",
]

# pip install kweaver-dolphin[full] - 安装全部功能
full = [
    "kweaver-dolphin[lib]",
    "kweaver-dolphin[cli]",
]

# pip install kweaver-dolphin[test] - 测试依赖
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

# pip install kweaver-dolphin[dev] - 开发依赖
dev = [
    "kweaver-dolphin[full]",
    "kweaver-dolphin[test]",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
dolphin = "dolphin.cli:main"

# Entry points for toolkits discovery
[project.entry-points."dolphin.toolkits"]
# Core toolkits from lib
search = "dolphin.lib.toolkits.search_toolkit:SearchToolkit"
sql = "dolphin.lib.toolkits.sql_toolkit:SQLToolkit"
memory = "dolphin.lib.toolkits.memory_toolkit:MemoryToolkit"
ontology = "dolphin.lib.toolkits.ontology_toolkit:OntologyToolkit"
plan = "dolphin.lib.toolkits.plan_toolkit:PlanToolkit"
cognitive = "dolphin.lib.toolkits.cognitive_toolkit:CognitiveToolkit"
vm = "dolphin.lib.toolkits.vm_toolkit:VMToolkit"
noop = "dolphin.lib.toolkits.noop_toolkit:NoopToolkit"
mcp = "dolphin.lib.toolkits.mcp_toolkit:MCPToolkit"
resource = "dolphin.lib.toolkits.resource_toolkit:ResourceToolkit"
env = "dolphin.lib.toolkits.env_toolkit:EnvToolkit"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dolphin*", "DolphinLanguageSDK*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
    "performance: Performance testing markers",
    "benchmark: Benchmark testing markers",
    "threading: Thread safety testing markers",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
]
